Register converters via CDI annotations instead of faces-config

--- a/Kitodo/src/main/webapp/pages/BatchesAll.xhtml
+++ b/Kitodo/src/main/webapp/pages/BatchesAll.xhtml
@@ -235,7 +235,7 @@
                                                 </h:panelGroup>
 
                                                 <h:selectManyListbox value="#{BatchForm.selectedProcesses}"
-                                                                     converter="ProcessConverter"
+                                                                     converter="#{processConverter}"
                                                                      style="width:90%;margin-bottom:10px;display:block;"
                                                                      size="20" id="selectProcesses">
                                                     <f:selectItems value="#{BatchForm.currentProcessesAsSelectItems}"/>
