--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Statistik.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Statistik.xhtml
@@ -85,7 +85,7 @@
                                  value="#{ProzessverwaltungForm.statisticsManager.sourceNumberOfTimeUnitsAsString}"/>
 
                     <h:selectOneMenu style="width:130px" value="#{ProzessverwaltungForm.statisticsManager.sourceTimeUnit}"
-                                     converter="StatisticsTimeUnitConverter">
+                                     converter="#{statisticsTimeUnitConverter}">
                         <f:selectItems value="#{ProzessverwaltungForm.statisticsManager.allTimeUnits}" var="unit"
                                         itemLabel="#{unit.title}" itemValue="#{unit}"/>
                     </h:selectOneMenu>
@@ -100,7 +100,7 @@
                     <h:outputText value="#{msgs.unit}" style="width:150px"/>
 
                     <h:selectOneMenu style="width:130px" value="#{ProzessverwaltungForm.statisticsManager.targetTimeUnit}"
-                                     converter="StatisticsTimeUnitConverter">
+                                     converter="#{statisticsTimeUnitConverter}">
                         <f:selectItems value="#{ProzessverwaltungForm.statisticsManager.allTimeUnits}" var="unit"
                                         itemLabel="#{unit.title}" itemValue="#{unit}"/>
                     </h:selectOneMenu>
@@ -109,7 +109,7 @@
 
                     <h:selectOneMenu style="width:130px"
                                      value="#{ProzessverwaltungForm.statisticsManager.targetCalculationUnit}"
-                                     converter="StatisticsCalculationUnitConverter">
+                                     converter="#{statisticsCalculationUnitConverter}">
                         <f:selectItems value="#{ProzessverwaltungForm.statisticsManager.allCalculationUnits}" var="unit"
                                         itemLabel="#{unit.title}" itemValue="#{unit}"/>
                     </h:selectOneMenu>
@@ -118,7 +118,7 @@
 
                     <h:selectOneMenu style="width:130px"
                                      value="#{ProzessverwaltungForm.statisticsManager.targetResultOutput}"
-                                     converter="StatisticsResultOutputConverter">
+                                     converter="#{statisticsResultOutputConverter}">
                         <f:selectItems value="#{ProzessverwaltungForm.statisticsManager.allResultOutputs}" var="out"
                                         itemLabel="#{out.title}" itemValue="#{out}"/>
                     </h:selectOneMenu>
