--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
@@ -269,11 +269,10 @@
                 </h:commandLink>
 
                 <!-- Mets-Export-Schaltknopf -->
-                <h:commandLink action="#{ProzessverwaltungForm.exportMets}" id="action19" title="#{msgs.exportMets}"
+                <h:commandLink action="#{ProzessverwaltungForm.exportMets(item.id)}" id="action19" title="#{msgs.exportMets}"
                                rendered="#{(ProzessverwaltungForm.displayMode.mode != 'template' and (LoginForm.maximaleBerechtigung == 2 || LoginForm.maximaleBerechtigung == 1)) and item.tifDirectoryExists}">
                     <h:graphicImage value="/pages/images/buttons/mets.png" alt="mets export"
                                     style="margin-right:2px"/>
-                    <t:updateActionListener property="#{ProzessverwaltungForm.processId}" value="#{item.id}"/>
                 </h:commandLink>
 
                 <!-- Mets-Export-Schaltknopf greyed -->
@@ -284,10 +283,9 @@
                     title="#{msgs.exportMets}"/>
 
                 <!-- PDF-Export-Schaltknopf -->
-                <h:commandLink action="#{ProzessverwaltungForm.exportPdf}" id="action20" title="#{msgs.exportPdf}"
+                <h:commandLink action="#{ProzessverwaltungForm.exportPdf(item.id)}" id="action20" title="#{msgs.exportPdf}"
                                rendered="#{ProzessverwaltungForm.displayMode.mode != 'template' and (LoginForm.maximaleBerechtigung == 2 || LoginForm.maximaleBerechtigung == 1) and item.tifDirectoryExists}">
                     <h:graphicImage value="/pages/images/buttons/pdf.png" alt="pdf export" style="margin-right:2px"/>
-                    <t:updateActionListener property="#{ProzessverwaltungForm.processId}" value="#{item.id}"/>
                 </h:commandLink>
 
                 <!-- PDF-Export-Schaltknopf greyed -->
@@ -297,10 +295,9 @@
                     title="#{msgs.exportPdf}"/>
 
                 <!-- DMS-Export-Schaltknopf -->
-                <h:commandLink action="#{ProzessverwaltungForm.exportDMS}" id="action21" title="#{msgs.importDms}"
+                <h:commandLink action="#{ProzessverwaltungForm.exportDMS(item.id)}" id="action21" title="#{msgs.importDms}"
                                rendered="#{ProzessverwaltungForm.displayMode.mode != 'template' and (LoginForm.maximaleBerechtigung == 2 || LoginForm.maximaleBerechtigung == 1) and item.tifDirectoryExists}">
                     <h:graphicImage value="/pages/images/buttons/dms.png" alt="dms export" style="margin-right:0px"/>
-                    <t:updateActionListener property="#{ProzessverwaltungForm.processId}" value="#{item.id}"/>
                 </h:commandLink>
 
                 <!-- PDF-Export-Schaltknopf greyed -->
