--- a/Kitodo/src/main/webapp/pages/RegelsaetzeBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/RegelsaetzeBearbeiten.xhtml
@@ -27,8 +27,8 @@
     xmlns:p="http://primefaces.org/ui"
 >
     <f:metadata>
-        <f:viewParam name="id" value="#{RulesetForm.rulesetId}"/>
-        <f:viewAction action="#{RulesetForm.loadRuleset}"/>
+        <f:viewParam name="id"/>
+        <f:viewAction action="#{RulesetForm.loadRuleset(id)}"/>
     </f:metadata>
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="inc/head.xhtml" />
