--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
@@ -25,8 +25,8 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     >
     <f:metadata>
-        <f:viewParam name="id" value="#{ProzessverwaltungForm.taskId}" />
-        <f:viewAction action="#{ProzessverwaltungForm.loadTask}" />
+        <f:viewParam name="id" />
+        <f:viewAction action="#{ProzessverwaltungForm.loadTask(id)}" />
     </f:metadata>
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="/pages/inc/head.xhtml" />
