--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -18,8 +18,8 @@
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:metadata>
-        <f:viewParam name="id" value="#{ProzessverwaltungForm.taskId}"/>
-        <f:viewAction action="#{ProzessverwaltungForm.loadTask}" />
+        <f:viewParam name="id"/>
+        <f:viewAction action="#{ProzessverwaltungForm.loadTask(id)}" />
     </f:metadata>
     <ui:define name="content">
         <p:panel id="listWrapper">
@@ -27,9 +27,9 @@
                 <p:panel styleClass="content-header">
                     <h3>
                         <h:outputText value="#{msgs.schrittHinzufuegen}"
-                                      rendered="#{ProzessverwaltungForm.taskId eq null}"/>
-                        <h:outputText value="#{msgs.schrittDetails}"
-                                      rendered="#{ProzessverwaltungForm.taskId ne null}"/>
+                                      rendered="#{empty ProzessverwaltungForm.task.title}"/>
+                        <h:outputText value="#{msgs.schrittDetails} (#{ProzessverwaltungForm.task.title})"
+                                      rendered="#{not empty ProzessverwaltungForm.task.title}"/>
                     </h3>
                     <p:commandButton value="#{msgs.speichern}"
                                      action="#{ProzessverwaltungForm.saveTaskAndRedirect()}"
@@ -38,6 +38,10 @@
                                      immediate="true"
                                      onclick="PF('notifications').renderMessage({'summary':'#{msgs.taskSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                                      update="notifications"/>
+                    <p:button value="#{msgs.abbrechen}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"
+                              icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button" rendered="#{not empty ProzessverwaltungForm.task.title}"/>
+                    <p:commandButton value="#{msgs.abbrechen} (und neue Task wieder löschen)" action="#{ProzessverwaltungForm.deleteTask(id)}" immediate="true"
+                                     icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button" rendered="#{empty ProzessverwaltungForm.task.title}"/>
                 </p:panel>
                 <p:messages autoUpdate="true"/>
                 <p:tabView id="tabs" activeIndex="#{param.tabId}">
@@ -59,9 +63,9 @@
         <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml"/>
     </ui:define>
     <ui:define name="breadcrumbs">
-        <li><a href="">#{msgs.schrittDetails}</a></li>
-        <li><h:link value="#{msgs.prozessBearbeiten}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"/></li>
-        <li><h:link value="#{msgs.prozesse}" outcome="processes"/></li>
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><h:link value="#{msgs.prozesse}" outcome="processes"/></li>
+        <li><h:link value="#{msgs.prozessBearbeiten}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"/></li>
+        <li><a href="">#{msgs.schrittDetails}</a></li>
     </ui:define>
 </ui:composition>
