--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -18,19 +18,18 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
     <f:metadata>
-        <f:viewParam name="id" value="#{BenutzergruppenForm.userGroupId}"/>
-        <f:viewAction action="#{BenutzergruppenForm.loadUserGroup}"/>
+        <f:viewParam name="id"/>
+        <f:viewAction action="#{BenutzergruppenForm.loadUserGroup(id)}"/>
     </f:metadata>
     <ui:define name="content">
         <p:panel id="listWrapper">
             <h:form id="usergroupEditForm">
                 <p:panel styleClass="content-header">
                     <h3>
-                        <h:outputText
-                            value="#{msgs.benutzergruppeBearbeiten} (#{BenutzergruppenForm.userGroup.title})"
-                            rendered="#{BenutzergruppenForm.userGroup.id ne null}"/>
+                        <h:outputText value="#{msgs.benutzergruppeBearbeiten} (#{BenutzergruppenForm.userGroup.title})"
+                                      rendered="#{not empty BenutzergruppenForm.userGroup.title}"/>
                         <h:outputText value="#{msgs.neueBenutzergruppeAnlegen}"
-                                      rendered="#{BenutzergruppenForm.userGroup.id eq null}"/>
+                                      rendered="#{empty BenutzergruppenForm.userGroup.title}"/>
                     </h3>
                     <p:commandButton value="#{msgs.speichern}"
                                      action="#{BenutzergruppenForm.save}"
@@ -143,7 +142,16 @@
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><h:link value="#{msgs.users}" outcome="users"/></li>
-        <li><a href="">#{msgs.benutzergruppeBearbeiten}</a></li>
+        <li>
+            <a href="">
+                <ui:fragment rendered="#{not empty BenutzergruppenForm.userGroup.title}">
+                    #{msgs.benutzergruppeBearbeiten}
+                </ui:fragment>
+                <ui:fragment rendered="#{empty BenutzergruppenForm.userGroup.title}">
+                    #{msgs.newUserGroup}
+                </ui:fragment>
+            </a>
+        </li>
     </ui:define>
     <!-- add user groups dialog -->
     <ui:define name="dialog">
