Update name of task edit form

--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -23,7 +23,7 @@
     </f:metadata>
     <ui:define name="content">
         <p:panel id="listWrapper">
-            <h:form id="processEditForm">
+            <h:form id="taskEditForm">
                 <p:panel styleClass="content-header">
                     <h3>
                         <h:outputText value="#{msgs.schrittHinzufuegen}"
