--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -21,6 +21,7 @@
         <f:viewParam name="id"/>
         <f:viewAction action="#{ProzessverwaltungForm.loadProcess(id)}" />
     </f:metadata>
+
     <ui:define name="content">
         <p:panel id="listWrapper">
             <h:form id="processEditForm">
@@ -29,13 +30,15 @@
                         <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title}"/>
                         <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProzessverwaltungForm.process.title}"/>
                     </h3>
-                    <p:commandButton value="#{msgs.speichern}"
+                    <p:commandButton id="save"
+                                     value="#{msgs.speichern}"
                                      action="#{ProzessverwaltungForm.saveAndRedirect}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
                                      onclick="PF('notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                                      update="notifications"/>
-                    <p:button value="#{msgs.abbrechen}" outcome="#{ProzessverwaltungForm.process.template ? 'projects' : 'processes'}"
+                    <p:button id="cancel" value="#{msgs.abbrechen}"
+                              outcome="#{ProzessverwaltungForm.process.template ? 'projects' : 'processes'}"
                               icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
                 </p:panel>
                 <p:messages autoUpdate="true"/>
@@ -59,11 +62,13 @@
             </h:form>
         </p:panel>
     </ui:define>
+
     <ui:define name="dialog">
         <ui:include src="/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml"/>
         <ui:include src="/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml"/>
         <ui:include src="/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml"/>
     </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><h:link value="#{msgs.prozesse}" outcome="processes"/></li>
@@ -73,6 +78,6 @@
         <ui:fragment rendered="#{empty ProzessverwaltungForm.process.title}">
             <li><a href="">#{msgs.einenNeuenProzessAnlegen}</a></li>
         </ui:fragment>
-
     </ui:define>
+
 </ui:composition>
